# python_uv_project_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env.example  pyproject.toml  pyrightconfig.json
config/enums/: enums.py
config/logger/: logging_setup.py
config/logger/logging-conf/: logging-dev.conf  logging-local.conf
config/settings/: setup.py
my_package/: main.py  utils.py
tests/: test_main.py
